[package]
name = "nonconvex-opt"
version = "0.1.1"
authors = ["PritRaj1 <prithvi@exalaboratories.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Simple non-convex optimization algorithms"
repository = "https://github.com/PritRaj1/NonConvex-RUST"
homepage = "https://github.com/PritRaj1/NonConvex-RUST"
readme = "README.md"   
keywords = ["math", "optimization"]        # optional
categories = ["algorithms", "science"]
exclude = [
    "/target/*",
    "/examples/gifs/*",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
ndarray = "0.16.1"
nalgebra = "0.33.2"
num-traits = "0.2.19"
simba = "0.9.0"
rand = "0.9.1"
rand_distr = "0.5.1"
thiserror = "2.0.12"
argmin = "0.10.0"
rayon = "1.10.0"

[dev-dependencies]
plotters = "0.3.7"
gif = "0.13.1"
image = "0.25.6"
criterion = "0.6.0"

[lib]
name = "non_convex_opt"
path = "src/lib.rs"

[[bench]]
name = "cga_benchmarks"
harness = false

[[bench]]
name = "pt_benchmarks"
harness = false

[[bench]]
name = "tabu_benchmarks"
harness = false

[[bench]]
name = "adam_benchmarks"
harness = false

[[bench]]
name = "nm_benchmarks"
harness = false

[[bench]]
name = "grasp_benchmarks"
harness = false

[[bench]]
name = "sa_benchmarks"
harness = false

[[bench]]
name = "de_benchmarks"
harness = false

[[bench]]
name = "cmaes_benchmarks"
harness = false

[[bench]]
name = "lbfgs_benchmarks"
harness = false

[[bench]]
name = "mspo_benchmarks"
harness = false

[[bench]]
name = "sga_benchmarks"
harness = false

[[bench]]
name = "tpe_benchmarks"
harness = false

[[bench]]
name = "cem_benchmarks"
harness = false